# claude-code-skills

./: README.md  chatkit.skill  oauth2-context7.skill  obsidian-context7.skill
.claude/skills/: better-auth.skill  (+5 more)
todo-agents/todo-agents/: .env.example  .gitignore  pyproject.toml
todo-agents/todo-agents/src/todo_agents/: main.py
todo-agents/todo-agents/src/todo_agents/agents/: __init__.py  basic.py  multi_agent.py  todo_agent.py  with_context.py  with_tools.py
todo-agents/todo-agents/src/todo_agents/api/: agent_api.py
todo-agents/todo-agents/src/todo_agents/tools/: __init__.py  todo_tools.py
todo-agents/todo-agents/tests/: conftest.py  test_agents.py
todo-app/: .env.example  .gitignore  pyproject.toml
todo-app/app/: main.py
todo-app/app/agents/agents/: __init__.py  todo_agent.py
todo-app/app/agents/tools/: __init__.py  todo_tools.py
todo-app/app/api/v1/: __init__.py  agent.py  chat_stream.py  chatkit.py  dummy_chatkit.py  items.py  todos.py
todo-app/app/core/: config.py  database.py  dependencies.py
todo-app/app/models/: todo.py
todo-app/app/repositories/: todo.py
todo-app/app/schemas/: __init__.py  item.py  todo.py
todo-app/app/services/: todo.py
todo-app/tests/: conftest.py
todo-app/tests/api/: test_items.py
todo-app/tests/integration/: test_todo_api.py
todo-app/tests/unit/: test_todo_model.py  test_todo_repository.py  test_todo_service.py
todo-app/todo-frontend/todo-frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
todo-app/todo-frontend/todo-frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
(+134 files in other folders)
