[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-agents"
version = "0.1.0"
description = "An OpenAI Agents project: todo-agents"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
voice = [
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "websockets>=12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
disallow_untyped_defs = true
